@@ -1,6 +1,7 @@
 package com.m2j2.haruseoul.host.publishedProgram.service;
 
 import com.m2j2.haruseoul.entity.*;
+import com.m2j2.haruseoul.host.program.dto.ProgramFilterListDto;
 import com.m2j2.haruseoul.host.publishedProgram.dto.*;
 import com.m2j2.haruseoul.repository.ProgramRepository;
 import com.m2j2.haruseoul.repository.PublishedProgramRepository;
@@ -104,40 +105,72 @@ public class DefaultPublishedProgramService implements PublishedProgramService {
         if (tab == null)
             return getList(memberIds, dates, statusIds, programIds, page, pageSize, sortBy, order);
 
+        /*
+            선택된 탭 내에서 유효한 옵션 중 체크된 것들로만 쿼리
+            ex. 예정된 탭에서 유효한 옵션: 1,2,5,6. 체크된 옵션:2,3,4 => 체크된 옵션 중 3,4는 유효하지 않으므로 유효한 2옵션으로만 쿼리
+        */
+        if (statusIds == null)
+            statusIds = new ArrayList<>();
+
         // tab : todo(예정된 예약) s=1,2,5,6일 때
-        // 1. 선택된 필터가 없을 때 statusIds == null => statusIds = List.of(1L,2L,5L,6L)
-        if (tab.equals("todo") && statusIds == null)
-            return getList(memberIds, dates, List.of(1L,2L,5L,6L), programIds, page, pageSize, sortBy, order);
-        // 2. 선택된 필터가 하나라도 있을 때 !statusId.isEmpty() => statusIds.retainAll(List.of(1L,2L,5L,6L))
-        if (tab.equals("todo") && !statusIds.isEmpty()) {
-            // statusIds(선택된 필터)와 1,2,5,6의 교집합
-            List<Long> retained = new ArrayList<>(Arrays.asList(1L, 2L, 5L, 6L));
-            retained.retainAll(statusIds);
-            return getList(memberIds, dates, retained, programIds, page, pageSize, sortBy, order);
+        switch (tab) {
+            case "todo" -> {
+                // 체크된 옵션과 유효한 옵션의 교집합 구하기
+                List<Long> retained = new ArrayList<>(Arrays.asList(1L, 2L, 5L, 6L));
+                retained.retainAll(statusIds);
+
+                // 겹치는게 있으면 그걸로 쿼리
+                if (!retained.isEmpty())
+                    return getList(memberIds, dates, retained, programIds, page, pageSize, sortBy, order);
+                // 겹치는게 없으면 모든 유효한 옵션으로 쿼리
+                return getList(memberIds, dates, List.of(1L, 2L, 5L, 6L), programIds, page, pageSize, sortBy, order);
+            }
+
+
+            // tab : finished(지난 예약) s=3
+            case "finished" -> {
+                // 체크된 옵션과 유효한 옵션의 교집합 구하기
+                List<Long> retained = new ArrayList<>(Arrays.asList(3L));
+                retained.retainAll(statusIds);
+
+                // 겹치는게 있으면 그걸로 쿼리
+                if (!retained.isEmpty())
+                    return getList(memberIds, dates, retained, programIds, page, pageSize, sortBy, order);
+                // 겹치는게 없으면 모든 유효한 옵션으로 쿼리
+                return getList(memberIds, dates, List.of(3L), programIds, page, pageSize, sortBy, order);
+            }
+
+
+            // tab : canceled(취소된 예약) s=4
+            case "canceled" -> {
+                // 체크된 옵션과 유효한 옵션의 교집합 구하기
+                List<Long> retained = new ArrayList<>(Arrays.asList(4L));
+                retained.retainAll(statusIds);
+
+                // 겹치는게 있으면 그걸로 쿼리
+                if (!retained.isEmpty())
+                    return getList(memberIds, dates, retained, programIds, page, pageSize, sortBy, order);
+                // 겹치는게 없으면 모든 유효한 옵션으로 쿼리
+                return getList(memberIds, dates, List.of(4L), programIds, page, pageSize, sortBy, order);
+            }
         }
 
-        // tab : finished(지난 예약) s=3
-        if (tab.equals("finished") && statusIds == null)
-            return getList(memberIds, dates, List.of(3L), programIds, page, pageSize, sortBy, order);
-        if (tab.equals("finished") && !statusIds.isEmpty()) {
-            // statusIds(선택된 필터)와 3의 교집합
-            List<Long> retained = new ArrayList<>(Arrays.asList(3L));
-            retained.retainAll(statusIds);
-            return getList(memberIds, dates, retained, programIds, page, pageSize, sortBy, order);
-        }
-
-        // tab : canceled(취소된 예약) s=4
-        if (tab.equals("canceled"))
-            return getList(memberIds, dates, List.of(4L), programIds, page, pageSize, sortBy, order);
-        if (tab.equals("canceled") && !statusIds.isEmpty()) {
-            // statusIds(선택된 필터)와 4의 교집합
-            List<Long> retained = new ArrayList<>(Arrays.asList(4L));
-            retained.retainAll(statusIds);
-            return getList(memberIds, dates, retained, programIds, page, pageSize, sortBy, order);
-        }
-
-        // 그 밖의 유효하지 않은 값들
+        // 그 밖의 유효하지 않은 tab값들은 무시
         return getList(memberIds, dates, statusIds, programIds, page, pageSize, sortBy, order);
+    }
+
+    @Override
+    public PublishedProgramProgramFilterResponseDto getProgramFilterList(Long hostId) {
+        List<Long> pIds = publishedProgramRepository.findDistinctProgramIdsByHostId(hostId);
+        List<Program> programs = programRepository.findAllList(hostId, pIds, null);
+        // program -> programFilterListDto
+        List<ProgramFilterListDto> programFilterListDtos = programs.stream()
+                .map(program -> modelMapper.map(program, ProgramFilterListDto.class))
+                .toList();
+
+        return PublishedProgramProgramFilterResponseDto.builder()
+                .programFilterListDtos(programFilterListDtos)
+                .build();
     }
 
     @Override
